--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <img src="images/logo.png" alt="" srcset="">
+    <img src="images/logo.png" alt="Burger" srcset="">
     <div class="header">
     <div class="container">
     <div class="navbar">
@@ -38,8 +38,7 @@
     </div>
 <!----------quality------->
 <div class="quality">
-    <div class="container">
-        <div class="row">
+
             <div class="column">
                 <h3>quality burgers</h3>
                 <p>here are the most quality burgers all around the world.
@@ -60,7 +59,57 @@
                     </p>
                     <img src="/images/logo.png" >
                 </div>
-        </div>
+</div>
+<!-----------our Menu------------>
+<div class="Mn">
+<h2 class="title"><em>Our</em> Menu</h2>
+<div class="menu">
+    
+    <div class="col1">
+        <img src="/images/SeekPng 1.png">
+        <h3>Double Burger</h3>
+        <p>These are the teastiest buregrs ever.<br> 
+            Dont let a day pass withouth giving a trial</p>
+            <h5>Ksh 250</h5>
+    </div>
+    <div class="col1">
+        <img src="/images/SeekPng 2.png" alt="">
+        <h3>Double Burger</h3>
+        <p>These are the teastiest buregrs ever. <br>
+            Dont let a day pass withouth giving a trial</p>
+            <h5>Ksh 250</h5>
+    </div>
+    <div class="col1">
+        <img src="/images/SeekPng 3.png" alt="">
+        <h3>Double Burger</h3>
+        <p>These are the teastiest buregrs ever. <br>
+            Dont let a day pass withouth giving a trial</p>
+            <h5>Ksh250</h5>
+    </div>
+</div>
+<div class="menu2">
+    <div class="col1">
+        <img src="/images/SeekPng 4.png" alt="">
+        <h3>Double Burger</h3>
+        <p>These are the teastiest buregrs ever. <br>
+            Dont let a day pass withouth giving a trial</p>
+            <h5>Ksh 250</h5>
+    </div>
+    <div class="col1">  
+        <img src="/images/SeekPng 5.png" alt="">
+        <h3>Double Burger</h3>
+        <p>These are the teastiest buregrs ever.<br> 
+            Dont let a day pass withouth giving a trial</p>
+            <h5>Ksh250</h5>
+    </div>
+    <div class="col1">
+        <img src="/images/SeekPng 6.png" alt="">
+        <h3>Double Burger</h3>
+        <p>These are the teastiest buregrs ever. <br>
+            Dont let a day pass withouth giving a trial</p>
+            <h5>Ksh250</h5>
+    </div>
+</div>
     </div>
 </div>
 </body>
