add neccesary changes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <img src="images/logo.png" alt="Burger" srcset="">
     <div class="header">
-    <div class="container">
-    <div class="navbar">
-        
+    <img src="images/logo.png" alt="Burger" srcset="">
+   
+     <div class="navbar">
     <nav>
         <ul id="menuItems">
             <li> <a href="home">Home</a></li>
@@ -21,9 +20,8 @@
             <li><a href="about">About</a></li>
         </ul>
     </nav>
-    </div>
 
-       
+        </div>
     <div class="row">
     <div class="colnm">
     <h1>Rain or sunshine,<br> time to Dine</h1>
@@ -34,7 +32,6 @@
     <img src="images/CITYPNG 1.png" >
     </div>
     </div>
-        </div>
     </div>
 <!----------quality------->
 <div class="quality">
@@ -111,6 +108,52 @@
     </div>
 </div>
     </div>
+</div>
+<!-------Double decker------->
+<div class="double">
+    <div class="small-container">
+        <div class="row">
+            <div class="colnm">
+                <img src="/images/SeekPng 1.png" >
+            </div>
+            <h2>The Double <br> <em>Decker</em></h2>
+                <p>Taste the explosion in your mouth</p>
+            </div>
+           </div>
+</div>
+<!-----------Discover--------->
+<div class="disc">
+    <div class="small-container">
+        <div class="row">
+            <div class="colnm">
+                <img src="/images/seekPng7.png" >
+            </div>
+            <h2>Discover even more <br>
+                with our mobile <br>App</h2>
+        </div>
+    </div>
+</div>
+<!--------------footer------->
+<div class="footer">
+    <div class="row">
+        <div class="footer-col1">
+            <h3>Bur<em>ger</em></h3>
+            <img src="/images/logo.png" >
+        </div>
+        <div class="footer-col2">
+            <h3>SiteMap</h3>
+            <ul>
+                <li>Home</li>
+                <li>Service</li>
+                <li>Abour</li>
+                <li>Contacts</li>
+            </ul>
+        </div>
+        <div class="footer-col3">
+            <h3>Subscribe to Our NewsLetter</h3>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
