--- a/index.html
+++ b/index.html
@@ -116,34 +116,41 @@
 <!-------Double decker------->
 <div class="double">
     
-        <div class="row">
+        <div class="row1">
             <h2>The Double <br> <em>Decker</em></h2>
                 <p>Taste the explosion in your mouth</p>
-                <img src="/images/double-check1.png" alt="" srcset="">
-                <img src="/images/double-check2.png" alt="" srcset="">
+                <div class="row">
+                <img src="/images/double-check1.png" alt="" class="check1" height="30%" width="30%">
+                <img src="/images/double-check2.png" alt="" class="check2" height="30%" width="30%">
+            </div>
             </div>
         
 </div>
 <!-----------Discover--------->
 <div class="disc">
     <div class="small-container">
-        <div class="row">
+        <div class="row3">
             <div class="col-2">
                 <img src="/images/seekPng7.png" >
             </div>
             <div class="col-2">
             <h1>Discover even more <br>
-                with our mobile <br>App</h1>
+                with our mobile <br>App</h1></div>
+                <div class="img-appg">
+                <img src="/images/applgo.png" alt="" srcset="" >
+                </div>
         </div>
         </div>
     </div>
 </div>
 <!--------------footer------->
-<footer>
-    <div class="SiteMap">
+<footer class="SiteMap">
+    <div class="cont">
         <div class="footer">
+            <div class="col-1">
             <img src="/images/logo.png" > <h3>Bur<em>ger</em></h3>
-        <div class="footer">
+            </div>
+            <div class="col-2">
             <h3>SiteMap</h3>
             <ul>
                 <li>Home</li>
@@ -151,14 +158,15 @@
                 <li>Abour</li>
                 <li>Contacts</li>
             </ul>
-        </div>
-        <div class="footer">
+            </div>
+            <div class="col-3">
             <h3>Subscribe to Our NewsLetter</h3> <form action="POST"></form>
-            <input type="email" id="email" name="email"> <button type="submit">Subscribe</button>
-        </div>
+            <input type="email" placeholder="Enter your email"> <button type="submit">Subscribe</button>
+            </div>
+    </div>
     </div>
     <div class="footer-col">
-        <div class="colums"><p>copyright 2021. All rights reserved</p></div>
+        <div class="columns"><p>copyright 2021. All rights reserved</p></div>
         <div class="columns"><p>Designed by melody</p></div>
     </div>
 </footer>
