add shopping icons

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <p>These are the teastiest buregrs ever.<br> 
             Dont let a day pass withouth giving a trial</p>
             <h5>Ksh 250</h5>
+            <img src="/images/shpp.jpg" class="shopicon">
     </div>
     <div class="col1">
         <img src="/images/SeekPng 2.png" alt="">
@@ -81,6 +82,7 @@
         <p>These are the teastiest buregrs ever. <br>
             Dont let a day pass withouth giving a trial</p>
             <h5>Ksh 250</h5>
+            <img src="/images/shpp.jpg" class="shopicon">
     </div>
     <div class="col1">
         <img src="/images/SeekPng 3.png" alt="">
@@ -88,6 +90,7 @@
         <p>These are the teastiest buregrs ever. <br>
             Dont let a day pass withouth giving a trial</p>
             <h5>Ksh250</h5>
+            <img src="/images/shpp.jpg" class="shopicon">
     </div>
 </div>
 <div class="menu2">
@@ -97,6 +100,7 @@
         <p>These are the teastiest buregrs ever. <br>
             Dont let a day pass withouth giving a trial</p>
             <h5>Ksh 250</h5>
+            <img src="/images/shpp.jpg" class="shopicon">
     </div>
     <div class="col1">  
         <img src="/images/SeekPng 5.png" alt="">
@@ -104,6 +108,7 @@
         <p>These are the teastiest buregrs ever.<br> 
             Dont let a day pass withouth giving a trial</p>
             <h5>Ksh250</h5>
+            <img src="/images/shpp.jpg" class="shopicon">
     </div>
     <div class="col1">
         <img src="/images/SeekPng 6.png" alt="">
@@ -111,6 +116,7 @@
         <p>These are the teastiest buregrs ever. <br>
             Dont let a day pass withouth giving a trial</p>
             <h5>Ksh250</h5>
+            <img src="/images/shpp.jpg" class="shopicon">
     </div>
 </div>
     </div>
