--- a/index.html
+++ b/index.html
@@ -176,6 +176,13 @@
     </div>
     <div class="footer-col">
         <div class="columns"><p>copyright 2021. All rights reserved</p></div>
+        <div class="columns"> 
+        <img src="/images/fb.png" alt="">
+        <img src="/images/youtube.png" alt=""> 
+        <img src="/images/twitter.png" alt="">
+        <img src="/images/ig.png" alt="">
+        <img src="/images/ln.png" alt="" srcset="">
+    </div>
         <div class="columns"><p>Designed by melody</p></div>
     </div>
 </footer>
