close the nav bars

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <img src="/images/ig.png" alt="">
         <img src="/images/ln.png" alt="" srcset="">
     </div>
-        <div class="columns"><p>Designed by melody</p></div>
+        <div class="columns"><p>Designed by melody chepkorir</p></div>
     </div>
 </footer>
 </body>
