add image appropriatly

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <a href="" class="btn">Order now</a>
                 <p>we cook and deliver the testiest burgers <br> away to your designed location</p>
             </div>
-            <div class="col-2"> <img src="images/CITYPNG 1.png" ></div>
+            <div class="col-2"><img src="/images/CITYPNG 1.png" alt=""></div>
+           
         </div>
         </div>
     </div>
