--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
     <div class="footer-col">
         <div class="columns"><p>copyright 2021. All rights reserved</p></div>
         <div class="columns"> 
-        <img src="/images/fb.png" alt="">
-        <img src="/images/youtube.png" alt=""> 
-        <img src="/images/twitter.png" alt="">
-        <img src="/images/ig.png" alt="">
-        <img src="/images/ln.png" alt="" srcset="">
+        <img src="/images/fb.png" alt="Facebook">
+        <img src="/images/youtube.png" alt="Youtube"> 
+        <img src="/images/twitter.png" alt="Twitter">
+        <img src="/images/ig.png" alt="Instergram">
+        <img src="/images/ln.png" alt="linkedLn" srcset="">
     </div>
         <div class="columns"><p>Designed by melody chepkorir</p></div>
     </div>
