--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 </nav>
             </div>
             <div class="row"> <div class="col-2"> 
-                <h1><h1>Rain or sunshine,<br> time to Dine</h1>
+                <h1>Rain or sunshine,<br> time to Dine</h1>
                 <a href="" class="btn">Order now</a>
                 <p>we cook and deliver the testiest burgers <br> away to your designed location</p>
             </div>
-            <div class="col-2"><img src="/images/CITYPNG 1.png" alt=""></div>
+            <div class="col-2"><img src="images/CITYPNG 1.png" alt=""></div>
            
         </div>
         </div>
@@ -46,7 +46,7 @@
                    
                 </div>
                 <div class="column">
-                    <img src="/images/deliver.png">
+                    <img src="images/deliver.png">
                     <h3>Fast delivery</h3>
                     <p> we deliver as soon as you order. no sooner had you ordered than we deliver to your do step.
                         Would you love to have a taste to our burgers now. the go ahead make orders.
