--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <h1>Discover even more <br>
                 with our mobile <br>App</h1></div>
                 <div class="img-appg">
-                <img src="/images/applgo.png" alt="" srcset="" >
+                <img src="images/applgo.png" alt="" srcset="" >
                 </div>
         </div>
         </div>
